force-app/main/default/objects/Presales__c/fields/Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Use_Cases__c</fullName>
    <label>Use Cases</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Archival</fullName>
            </value>
            <value>
                <fullName>Auto-Deploy Properties</fullName>
            </value>
            <value>
                <fullName>Backup</fullName>
            </value>
            <value>
                <fullName>Build Maven Jobs</fullName>
            </value>
            <value>
                <fullName>CI Jobs</fullName>
            </value>
            <value>
                <fullName>Compare</fullName>
            </value>
            <value>
                <fullName>Dataloader</fullName>
            </value>
            <value>
                <fullName>Environment Provisioning</fullName>
            </value>
            <value>
                <fullName>Environment Registrations</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>Identify Issues</fullName>
            </value>
            <value>
                <fullName>Manage Environment Properties</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>nCino</fullName>
            </value>
            <value>
                <fullName>Org Synchronization</fullName>
            </value>
            <value>
                <fullName>Profile Manager</fullName>
            </value>
            <value>
                <fullName>Replicate</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Restore</fullName>
            </value>
            <value>
                <fullName>SalesforceDX</fullName>
            </value>
            <value>
                <fullName>Security Compliance</fullName>
            </value>
            <value>
                <fullName>Selective Deployment</fullName>
            </value>
            <value>
                <fullName>Template Configuration</fullName>
            </value>
            <value>
                <fullName>Template Deployment</fullName>
            </value>
            <value>
                <fullName>Test Execution</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Version Control</fullName>
            </value>
            <value>
                <fullName>Vlocity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>