force-app/main/default/objects/Presales__c/fields/Vault_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Vault_Implementation__c</fullName>
    <label>Vault Implementation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Self-Hosted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>