force-app/main/default/objects/Presales__c/fields/Vault_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Vault_Subscriptions__c</fullName>
    <formula>Opportunity_Name__r.No_of_Product_Subs_Vault__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vault Subscriptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>