force-app/main/default/objects/Presales__c/fields/VCS_Hosting__c.field-meta.xml
<CustomField>
    <fullName>VCS_Hosting__c</fullName>
    <label>VCS Hosting</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Access</fullName>
            </value>
            <value>
                <fullName>Behind Firewall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>