force-app/main/default/objects/Presales__c/validationRules/ALM.validationRule-meta.xml
<ValidationRule>
    <fullName>ALM</fullName>
    <active>true</active>
    <description>Mandate &quot;ALM&quot; field when the Product is &quot;ARM&quot;.</description>
    <errorConditionFormula>CONTAINS(TEXT(Product__c) , &quot;ARM&quot;) &amp;&amp;  
ISBLANK( TEXT(   ALM__c ) )</errorConditionFormula>
    <errorDisplayField>ALM__c</errorDisplayField>
    <errorMessage>ALM is required when the Product is &quot;ARM&quot;.</errorMessage>
</ValidationRule>