force-app/main/default/objects/Presales__c/validationRules/Current_Data_Migration_Solution.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_Data_Migration_Solution</fullName>
    <active>true</active>
    <description>Mandate &quot;Current Data Migration Solution&quot; field when the Product is &quot;RBM&quot;.</description>
    <errorConditionFormula>CONTAINS(TEXT(Product__c) , &quot;RBM&quot;) &amp;&amp;  
LEN(  Current_Data_Migration_Solution__c  ) &lt;= 0</errorConditionFormula>
    <errorDisplayField>Current_Data_Migration_Solution__c</errorDisplayField>
    <errorMessage>Current Data Migration Solution is required when the Product is &quot;RBM&quot;.</errorMessage>
</ValidationRule>