force-app/main/default/objects/Presales__c/validationRules/Environments_brought_in_for_PoC.validationRule-meta.xml
<ValidationRule>
    <fullName>Environments_brought_in_for_PoC</fullName>
    <active>true</active>
    <description>Mandate &quot;Environments brought in for PoC&quot; field when the Product is &quot;Vault&quot;.</description>
    <errorConditionFormula>CONTAINS(TEXT(Product__c), &quot;Vault&quot;) &amp;&amp;  
LEN( Environments_brought_in_for_PoC__c ) &lt;= 0</errorConditionFormula>
    <errorDisplayField>Environments_brought_in_for_PoC__c</errorDisplayField>
    <errorMessage>Environments brought in for PoC is required when the Product is &quot;Vault&quot;.</errorMessage>
</ValidationRule>