force-app/main/default/objects/Presales__c/validationRules/Existing_data_backup_solution.validationRule-meta.xml
<ValidationRule>
    <fullName>Existing_data_backup_solution</fullName>
    <active>true</active>
    <description>Mandate &quot;Existing data backup solution&quot; field when the Product is &quot;Vault&quot;.</description>
    <errorConditionFormula>CONTAINS(TEXT(Product__c), &quot;Vault&quot;) &amp;&amp;  
LEN( Existing_data_backup_solution__c ) &lt;= 0</errorConditionFormula>
    <errorDisplayField>Existing_data_backup_solution__c</errorDisplayField>
    <errorMessage>Existing data backup solution is required when the Product is &quot;Vault&quot;.</errorMessage>
</ValidationRule>