force-app/main/default/objects/Presales__c/validationRules/Is_Customer_Data_Protected.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Customer_Data_Protected</fullName>
    <active>true</active>
    <description>Mandate &quot;Is Customer Data Protected field&quot; when the Product is &quot;Vault&quot;.</description>
    <errorConditionFormula>CONTAINS(TEXT(Product__c), &quot;Vault&quot;) &amp;&amp;  
LEN(   Is_Customer_Data_Protected__c   ) &lt;= 0</errorConditionFormula>
    <errorDisplayField>Is_Customer_Data_Protected__c</errorDisplayField>
    <errorMessage>Is Customer Data Protected is required when the Product is &quot;Vault&quot;.</errorMessage>
</ValidationRule>