force-app/main/default/objects/Presales__c/validationRules/Is_DX_Used.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_DX_Used</fullName>
    <active>true</active>
    <description>Mandate &quot;Is DX Used?&quot; field when the Product is &quot;ARM&quot;.</description>
    <errorConditionFormula>CONTAINS(TEXT(Product__c) , &quot;ARM&quot;) &amp;&amp;  
ISBLANK( TEXT(    Is_DX_used__c  ) )</errorConditionFormula>
    <errorDisplayField>Is_DX_used__c</errorDisplayField>
    <errorMessage>Is DX Used? is required when the Product is &quot;ARM&quot;.</errorMessage>
</ValidationRule>