force-app/main/default/objects/Presales__c/validationRules/Log_Vault_Ticket.validationRule-meta.xml
<ValidationRule>
    <fullName>Log_Vault_Ticket</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISPICKVAL(Log_a_Ticket_with__c, &apos;Vault Support&apos;),  Bypass_Validation_Rule__c = False,
OR(
LEN ( Issue_Description__c ) = 0,
ISBLANK( Product_Instance__c ) ,
ISBLANK( Module__c ),
ISBLANK( TEXT(Issue_Enhancement_in__c )),
ISBLANK( TEXT( Priority__c ))
)
)</errorConditionFormula>
    <errorMessage>Please make sure you have entered &apos;Issue/Enhancement in&apos;, &apos;Issue Description&apos;, &apos;Product Instance&apos;, &apos;Module&apos; and &apos;Priority&apos; to submit a ticket to Vault support.</errorMessage>
</ValidationRule>