force-app/main/default/objects/Presales__c/validationRules/Managed_Packages.validationRule-meta.xml
<ValidationRule>
    <fullName>Managed_Packages</fullName>
    <active>true</active>
    <description>Mandate &quot;Managed Packages&quot; when the Product is &quot;Vault&quot; or &quot;RBM&quot;.</description>
    <errorConditionFormula>(CONTAINS(TEXT(Product__c), &quot;Vault&quot;) || CONTAINS(TEXT(Product__c) , &quot;RBM&quot;)) &amp;&amp;  
LEN( Managed_Packages__c   ) &lt;= 0</errorConditionFormula>
    <errorDisplayField>Managed_Packages__c</errorDisplayField>
    <errorMessage>Managed Packages is required when the Product is &quot;Vault&quot; or &quot;RBM&quot;.</errorMessage>
</ValidationRule>