force-app/main/default/objects/Presales__c/validationRules/Mandate_Lines_of_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_Lines_of_Code</fullName>
    <active>true</active>
    <description>Mandate Lines of Code when the Product is &quot;CodeScan&quot;</description>
    <errorConditionFormula>AND(  ISBLANK( Lines_of_Code__c ),ISPICKVAL( Product__c , &apos;CodeScan&apos;) )</errorConditionFormula>
    <errorDisplayField>Lines_of_Code__c</errorDisplayField>
    <errorMessage>Lines of Code is required when the Product selected is &quot;CodeScan&quot;. Please enter a numeric value for Lines of Code.</errorMessage>
</ValidationRule>