force-app/main/default/objects/Presales__c/validationRules/Mandate_Product_Version.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_Product_Version</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( Bypass_Validation_Rule__c = False,
ISBLANK( Product_Version__c ), OR( ISPICKVAL(Issue_Enhancement_in__c, &apos;ARM&apos;), ISPICKVAL(Issue_Enhancement_in__c, &apos;RBM&apos;), ISPICKVAL(Issue_Enhancement_in__c, &apos;CodeScan&apos;)
)
)</errorConditionFormula>
    <errorDisplayField>Product_Version__c</errorDisplayField>
    <errorMessage>Please make sure you have entered &apos;Product Version&apos; when &apos;Issue/Enhancement in&apos; selected is ARM&apos; or &apos;CodeScan&apos; or &apos;RBM&apos; to submit a ticket to the support.</errorMessage>
</ValidationRule>