force-app/main/default/objects/Presales__c/validationRules/Mule_Hosting.validationRule-meta.xml
<ValidationRule>
    <fullName>Mule_Hosting</fullName>
    <active>true</active>
    <description>This field is required when the Product is &quot;Mulesoft&quot;.</description>
    <errorConditionFormula>TEXT(Product__c) = &quot;Mulesoft&quot; &amp;&amp;  ISBLANK(TEXT(Mule_Hosting__c))</errorConditionFormula>
    <errorDisplayField>Mule_Hosting__c</errorDisplayField>
    <errorMessage>Mule Hosting is required when Product is &quot;Mulesoft&quot;</errorMessage>
</ValidationRule>