force-app/main/default/objects/Presales__c/validationRules/Number_of_Orgs.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Orgs</fullName>
    <active>true</active>
    <description>Mandate &quot;# of Orgs&quot; field when the Product is &quot;ARM&quot; or &quot;Vault&quot; or &quot;RBM&quot; or &quot;Mulesoft&quot;.</description>
    <errorConditionFormula>OR( CONTAINS(TEXT(Product__c), &quot;ARM&quot;), CONTAINS(TEXT(Product__c), &quot;Vault&quot;), CONTAINS(TEXT(Product__c) , &quot;RBM&quot;), CONTAINS(TEXT(Product__c) , &quot;Mulesoft&quot;) ) &amp;&amp;  
ISBLANK( Orgs__c )</errorConditionFormula>
    <errorDisplayField>Orgs__c</errorDisplayField>
    <errorMessage>&quot;# of Orgs&quot; is required when the Product is &quot;ARM&quot; or &quot;Vault&quot; or &quot;RBM&quot; or &quot;Mulesoft&quot;.</errorMessage>
</ValidationRule>