force-app/main/default/objects/Presales__c/validationRules/Number_of_SF_Developers.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_SF_Developers</fullName>
    <active>true</active>
    <description>Mandate &quot;# SF Developers&quot; field when the Product is &quot;CodeScan&quot;.</description>
    <errorConditionFormula>CONTAINS(TEXT(Product__c), &quot;CodeScan&quot;) &amp;&amp;  
ISBLANK( SF_Developers__c )</errorConditionFormula>
    <errorDisplayField>SF_Developers__c</errorDisplayField>
    <errorMessage>&quot;# SF Developers&quot; is required when the Product is &quot;CodeScan&quot;.</errorMessage>
</ValidationRule>