force-app/main/default/objects/Presales__c/validationRules/Number_of_SF_environments_to_be_scanned.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_SF_environments_to_be_scanned</fullName>
    <active>true</active>
    <description>Mandate &quot;# SF environments to be scanned&quot; field when the Product is &quot;CodeScan&quot;.</description>
    <errorConditionFormula>CONTAINS(TEXT(Product__c), &quot;CodeScan&quot;) &amp;&amp;  
ISBLANK( SF_environments_to_be_scanned__c )</errorConditionFormula>
    <errorDisplayField>SF_environments_to_be_scanned__c</errorDisplayField>
    <errorMessage>&quot;# SF environments to be scanned&quot; is required when the Product is &quot;CodeScan&quot;.</errorMessage>
</ValidationRule>