force-app/main/default/objects/Presales__c/validationRules/Number_of_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Users</fullName>
    <active>false</active>
    <description>Mandate &quot;# of  Users&quot; field when the Product is &quot;ARM&quot;.</description>
    <errorConditionFormula>CONTAINS(TEXT(Product__c), &quot;ARM&quot;) &amp;&amp;  
ISBLANK(  Users__c )</errorConditionFormula>
    <errorMessage>&quot;# of Users&quot; is required when the Product is &quot;ARM&quot;.</errorMessage>
</ValidationRule>