force-app/main/default/objects/Presales__c/validationRules/Other_ALM_Authentication.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_ALM_Authentication</fullName>
    <active>true</active>
    <description>Mandate &quot;Other ALM Authentication&quot; field when ALM Authentication is selected as &quot;Other&quot;.</description>
    <errorConditionFormula>ISPICKVAL( ALM_Authentication__c , &quot;Other&quot;) &amp;&amp;  
ISBLANK( Other_ALM_Authentication__c  )</errorConditionFormula>
    <errorDisplayField>Other_ALM_Authentication__c</errorDisplayField>
    <errorMessage>Please enter &quot;Other ALM Authentication&quot; since the ALM Authentication is selected as &quot;Other&quot;.</errorMessage>
</ValidationRule>