force-app/main/default/objects/Presales__c/validationRules/Other_IDE.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_IDE</fullName>
    <active>true</active>
    <description>Mandate &quot;Other IDE&quot; field when IDE is selected as &quot;Other&quot;.</description>
    <errorConditionFormula>ISPICKVAL(  Current_IDE__c  , &quot;Other&quot;) &amp;&amp;  
ISBLANK(  Other_IDE__c   )</errorConditionFormula>
    <errorDisplayField>Other_IDE__c</errorDisplayField>
    <errorMessage>Please enter &quot;Other IDE&quot; since the Current IDE is selected as &quot;Other&quot;.</errorMessage>
</ValidationRule>