force-app/main/default/objects/Presales__c/validationRules/Other_SCA.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_SCA</fullName>
    <active>true</active>
    <description>Mandate &quot;Other SCA&quot; field when SCA is selected as &quot;Other&quot;.</description>
    <errorConditionFormula>ISPICKVAL(   SCA__c  , &quot;Other&quot;) &amp;&amp;  
ISBLANK(   Other_SCA__c    )</errorConditionFormula>
    <errorDisplayField>Other_SCA__c</errorDisplayField>
    <errorMessage>Please enter &quot;Other SCA&quot; since the SCA is selected as &quot;Other&quot;.</errorMessage>
</ValidationRule>