force-app/main/default/objects/Presales__c/validationRules/Other_SSO.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_SSO</fullName>
    <active>true</active>
    <description>Mandate &quot;Other SSO&quot; field when SSO is selected as &quot;Other&quot;.</description>
    <errorConditionFormula>ISPICKVAL(  SSO__c  , &quot;Other&quot;) &amp;&amp;  
ISBLANK(  Other_SSO__c   )</errorConditionFormula>
    <errorDisplayField>Other_SSO__c</errorDisplayField>
    <errorMessage>Please enter &quot;Other SSO&quot; since the SSO is selected as &quot;Other&quot;.</errorMessage>
</ValidationRule>