force-app/main/default/objects/Presales__c/validationRules/Other_Storage_Environment.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Storage_Environment</fullName>
    <active>true</active>
    <description>Mandate &quot;Other Storage Environment&quot; field when VCS Authentication is selected as &quot;Other&quot;.</description>
    <errorConditionFormula>ISPICKVAL( Storage_Environment__c  , &quot;Other&quot;) &amp;&amp;   ISBLANK( Other_Storage_Environment__c  )</errorConditionFormula>
    <errorDisplayField>Other_Storage_Environment__c</errorDisplayField>
    <errorMessage>Please enter &quot;Other Storage Environment&quot; since the VCS Authentication is selected as &quot;Other&quot;.</errorMessage>
</ValidationRule>