force-app/main/default/objects/Presales__c/validationRules/Release_Frequency.validationRule-meta.xml
<ValidationRule>
    <fullName>Release_Frequency</fullName>
    <active>true</active>
    <description>Mandate the &quot;Release Frequency&quot; field when the Product is &quot;ARM&quot; or &quot;RBM&quot; or &quot;Mulesoft&quot;.</description>
    <errorConditionFormula>(CONTAINS(TEXT(Product__c) , &quot;ARM&quot;) || CONTAINS(TEXT(Product__c) , &quot;RBM&quot;) || CONTAINS(TEXT(Product__c) , &quot;Mulesoft&quot;)) &amp;&amp;  
ISBLANK( TEXT( Release_Frequency__c ) )</errorConditionFormula>
    <errorDisplayField>Release_Frequency__c</errorDisplayField>
    <errorMessage>&quot;Release Frequency&quot; is required when the Product is &quot;ARM&quot; or &quot;RBM&quot; or &quot;Mulesoft&quot;.</errorMessage>
</ValidationRule>