force-app/main/default/objects/Presales__c/validationRules/Salesforce_API_Call_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Salesforce_API_Call_Limit</fullName>
    <active>true</active>
    <description>Mandate &quot;Salesforce API Call Limit&quot; field when the Product is &quot;Vault&quot;.</description>
    <errorConditionFormula>CONTAINS(TEXT(Product__c), &quot;Vault&quot;) &amp;&amp;  
LEN(  Salesforce_API_Call_Limit__c  ) &lt;= 0</errorConditionFormula>
    <errorDisplayField>Salesforce_API_Call_Limit__c</errorDisplayField>
    <errorMessage>&quot;Salesforce API Call Limit&quot; is required when the Product is &quot;Vault&quot;.</errorMessage>
</ValidationRule>