force-app/main/default/objects/Presales__c/validationRules/SF_Licensed_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>SF_Licensed_Users</fullName>
    <active>false</active>
    <description>Mandate &quot;# SF Licensed Users&quot; field when the Product is &quot;ARM&quot; or &quot;Vault&quot;.</description>
    <errorConditionFormula>CONTAINS(TEXT(Product__c), &quot;Vault&quot;) &amp;&amp;  
ISBLANK(  SF_Licensed_Users__c  )</errorConditionFormula>
    <errorMessage>&quot;# SF Licensed Users&quot; is required when the Product is &quot;Vault&quot;.</errorMessage>
</ValidationRule>