force-app/main/default/objects/Presales__c/validationRules/Storage_Environment_Hosting.validationRule-meta.xml
<ValidationRule>
    <fullName>Storage_Environment_Hosting</fullName>
    <active>true</active>
    <description>Mandate &quot;Storage Environment Hosting&quot; field when the Product is &quot;Vault&quot;.</description>
    <errorConditionFormula>CONTAINS(TEXT(Product__c) , &quot;Vault&quot;) &amp;&amp;  
ISBLANK( TEXT(  Storage_Environment_Hosting__c  ) )</errorConditionFormula>
    <errorDisplayField>Storage_Environment_Hosting__c</errorDisplayField>
    <errorMessage>&quot;Storage Environment Hosting&quot; is required when the Product is &quot;Vault&quot;.</errorMessage>
</ValidationRule>