force-app/main/default/objects/Presales__c/validationRules/Test_Automation.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Automation</fullName>
    <active>true</active>
    <description>Mandate &quot;Test Automation&quot; field when the Product is &quot;ARM&quot;.</description>
    <errorConditionFormula>CONTAINS(TEXT(Product__c) , &quot;ARM&quot;) &amp;&amp;  
ISBLANK( TEXT(  Test_Automation__c ) )</errorConditionFormula>
    <errorDisplayField>Test_Automation__c</errorDisplayField>
    <errorMessage>&quot;Test Automation&quot; is required when the Product is &quot;ARM&quot;.</errorMessage>
</ValidationRule>