force-app/main/default/objects/Presales__c/validationRules/VCS_Authentication.validationRule-meta.xml
<ValidationRule>
    <fullName>VCS_Authentication</fullName>
    <active>true</active>
    <description>Mandate &quot;VCS Authentication&quot; field when the Product is &quot;CodeScan&quot; and Source Control is not &quot;Not Applicable&quot;.</description>
    <errorConditionFormula>CONTAINS(TEXT(Product__c) , &quot;CodeScan&quot;) &amp;&amp;   NOT( TEXT(Source_Control__c ) = &quot;Not Applicable&quot;) &amp;&amp;
ISBLANK( TEXT(VCS_Authentication__c))</errorConditionFormula>
    <errorDisplayField>VCS_Authentication__c</errorDisplayField>
    <errorMessage>VCS Authentication is required when the Product is &quot;CodeScan&quot;  and Source Control is not &quot;Not Applicable&quot;.</errorMessage>
</ValidationRule>